feat: add //PREVIEW support